Add block on zones create/delete, and isSelected zone highlighting.

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,7 +1,15 @@
 FROM python:3.9
-ENV PYTHONUNBUFFERED 1
+
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /app
+
+# Копіюємо файли з вимогами та встановлюємо залежності
 COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY backend /app
+
+# Копіюємо код бекенду
+COPY backend/ /app
+
+# Запускаємо сервер Django на 0.0.0.0:8000
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
