--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,7 +1,19 @@
 FROM node:18
+
 WORKDIR /app
-COPY frontend/angular_app/package*.json ./
+
+# Копіюємо файли залежностей і встановлюємо їх
+COPY frontend/package*.json ./
 RUN npm install
-COPY frontend/angular_app /app
+
+# Копіюємо увесь код фронтенду
+COPY frontend/ ./
+
+# Збираємо додаток у production режимі
 RUN npm run build --prod
-CMD ["npx", "http-server", "dist/angular_app", "-p", "4200"]
+
+# Відкриваємо порт 4200
+EXPOSE 4200
+
+# Запускаємо сервер для подачі статичних файлів (наприклад, через http-server)
+CMD ["npx", "http-server", "dist/frontend/browser", "-p", "4200"]
